--- a/app/assets/stylesheets/api/users.scss
+++ b/app/assets/stylesheets/api/users.scss
@@ -2,7 +2,9 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
-
+.group {
+    width: 100vw;
+}
 .main-nav {
     display:flex;
     height: 68px;
@@ -120,7 +122,7 @@ button#demo-button2 {
 }
 
 .main-content {
-    height: 298.5px;
+    // height: 150px;
     padding: 0px;
     margin-top: 73.5px;
     margin-bottom: 0px;
@@ -128,7 +130,7 @@ button#demo-button2 {
     font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Oxygen-Sans,Ubuntu,Cantarell,Fira Sans,Droid Sans,Helvetica Neue,Helvetica,ヒラギノ角ゴ Pro W3,Hiragino Kaku Gothic Pro,メイリオ,Meiryo,ＭＳ Ｐゴシック,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol;
     text-align: center;
     font-weight: 600;
-    height: 30%;
+    // height: 300px;
     
     div{
         margin: 2px;
@@ -148,13 +150,22 @@ button#demo-button2 {
     position: relative;
     display: flex;
     flex-direction: row;
-    width: 100%;
-    
-    grid-column-gap: 20px;
-    margin-top: -130px;
-    margin-right: 0px;
+    width: 100vw;
+    // -ms-flex-wrap: wrap;
+    margin-left: 10px;
+    margin-right: auto;
+    margin-top: -210px;
+    padding-right: 15px;
+    padding-left: 15px;
     overflow: hidden;
-    img {
+
+    .column {
+        width: 230px;
+        margin-right: 17px;
+    }
+}
+
+ img {
         border-radius: 12px;
         max-width: 230px;
         max-height: 350px;
@@ -162,12 +173,10 @@ button#demo-button2 {
         margin-bottom: 15px;
         
     }
-    
-}
 
 .placeholder1 {
     width: 230px;
-    height: 100px;
+    height: 70px;
 }
 .placeholder2 {
     width: 230px;
@@ -178,14 +187,24 @@ button#demo-button2 {
     height: 300px;
 }
 
-.column1, .column2, .column3, .column4
-.column5, .column6, .column7{
-       margin-bottom: 25px;
+// .column2, .column3, .column4,
+// .column5, .column6, .column7 {
+//        margin-bottom: 25px;
+//     //    margin-right: 10px;
+//        margin-left: 10px;
+//        width: 230px;   
         
-}
+// }
 
-.column2, .column6 {
-    padding-top: 50px;
+// .column1 {
+//     width: 230px;
+//     margin-bottom: 25px;
+// }
+.column2 {
+    display: flex;
+    // justify-content: center;
+    flex-direction: column;
+    align-items: center;
 }
 
 .faStroopwafel1 {
